--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
   </div>
    
 <hr>   
-	
+	<div class="text-block">
+     次回は「株主ってえらいの？」というお話。株主になって得られる“会社の一部の権利”とは、具体的にどんなものなのでしょうか？
+ </div>
 	 
   </div><!-- /.wrapper -->
 </body>
