--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
     <div class="text-block">
      公開価格での取引は、ゲームの限定グッズが、抽選に当たったファンだけに「先行販売」されるようなイメージです。
 <br>&nbsp;<br>
-この例えでいうところの「一般販売」は、証券取引所での取引です。証券取引所で株の売り買いが始まって、最初に取引が成立したときの値段を「<b>初値（はつね）</b>」といいます。
+この例えでいうところの「<b>一般販売</b>」は、証券取引所での取引です。証券取引所で株の売り買いが始まって、最初に取引が成立したときの値段を「<b>初値（はつね）</b>」といいます。
 <br>&nbsp;<br>
 この「初値」は、公開価格と比べて、人気が高ければ高くなるし、逆に人気がなければ安くなってしまうこともあります。
 <br>&nbsp;<br>
-つまり、初値は「実際の市場での最初の評価」ともいえるのです。 </div>
+つまり、<b>初値は「実際の市場での最初の評価」ともいえる</b>のです。 </div>
 
     <img src="level02-04/talk02.svg" alt="カブちゃんととうしくんの会話02" class="content-image">
 
     <div class="text-block">
   <b> ● 非上場企業の株はどうやって決まるの？
 </b><br>&nbsp;<br>
-非上場企業の株は、証券取引所でのやりとりがありません。そのため、売りたい人と買いたい人が話し合って、個別に値段を決めるのが基本です。
+非上場企業の株は、証券取引所でのやりとりがありません。そのため、<b>売りたい人と買いたい人が話し合って、個別に値段を決める</b>のが基本です。
 <br>&nbsp;<br>
 たとえば、ある会社の社員が「自分の株を売りたい」と思ったとき、会社やほかの株主に相談して、「じゃあ1株〇〇円でどうですか？」と交渉して決めるのです。
 <br>&nbsp;<br>
